--- a/preprocess_for_cellpose/configs/1_preprocess_data_config_test.toml
+++ b/preprocess_for_cellpose/configs/1_preprocess_data_config_test.toml
@@ -1,5 +1,5 @@
 input_folders = [
-  'Z:/PATH/TO/SAMPLE_FOLDER',
+  'C:\Users\SmartBrain_32C_TR\Documents\GitHub\standard_test_data\lsfm_data_processing\preprocess_data\20260206_15_18_43_EH_EH0059_M_P8_Aldh1_LAS_488GFP_561Bg_640Sytox_4x_5umstep_Destripe_DONE',
 ]
 
 # -------- MIP SETTINGS --------
